examples/err-notlocal.uc
f(){
    var n;

    return 17;
}

main(){
    n=10; // error: identifier not declared

    return 0;
}